2009-12-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_socket::wait_for_events): Drop parameter default
	value.
	* fhandler_socket.cc (fhandler_socket::connect): Add false as second
	parameter to wait_for_events call.
	(fhandler_socket::accept): Ditto.
	(fhandler_socket::send_internal): Fix typo in call to wait_for_events.

2009-12-26  Eric Blake  <ebb9@byu.net>

	* include/pty.h (openpty, forkpty): Mark last two arguments const,
	to match glibc 2.8.
	* libc/bsdlib.cc (openpty, forkpty): Likewise.

2009-12-25  Andy Koppe  <andy.koppe@gmail.com>

	* fhandler_console.cc (handler_console::read): Use the tty's VERASE
	character as the backspace keycode.

2009-12-24  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Set fileattr to
	FILE_ATTRIBUTE_DIRECTORY in a certain error condition.  Explain why.

2009-12-22  Christopher Faylor  <me+cygwin@cgf.cx>

	* select.cc (fhandler_fifo::select_read): Fill in device specific
	record.
	(fhandler_fifo::select_write): Ditto.
	(fhandler_fifo::select_except): Ditto.

2009-12-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cygwin_conv_path): Add band-aid including comment to avoid
	conversion from POSIX "." to Win32 ".\\".

2009-12-21  Corinna Vinschen  <corinna@vinschen.de>

	* exec.cc (execvp): Call find_exec with FE_NNF flag to enforce
	a NULL return when executable isn't found in $PATH.  Convert NULL
	to "".
	(execvpe): Ditto.
	* spawn.cc (spawn_guts): Return with EFAULT if prog_arg is NULL.
	Return with ENOENT if prog_arg is empty string.  Add a comment.

2009-12-21  Thomas Wolff  <towo@towo.net>

	* fhandler_console.cc (get_nonascii_key): Generate ESC prefix 
	for Alt modifier generically for function keys and keypad keys.
	Distinguish Normal, Ctrl, Shift, Ctrl-Shift rather 
	than Normal, Ctrl, Shift, Alt, so that in combination with generic 
	Alt handling all 8 combinations of these modifiers are distinguished.
	(keytable): Add escape sequences for remaining modified 